k8s/bases/apps/whoami/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: whoami
  labels:
    pod-security.kubernetes.io/enforce: restricted
    pod-security.kubernetes.io/enforce-version: latest
