k8s/bases/apps/whoami/httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: whoami
  namespace: whoami
  annotations:
    gethomepage.dev/enabled: "true"
    gethomepage.dev/name: Whoami
    gethomepage.dev/description: HTTP echo service for network diagnostics.
    gethomepage.dev/group: Diagnostics
    gethomepage.dev/icon: mdi-network-check
    gethomepage.dev/href: https://whoami.${domain}
    gethomepage.dev/pod-selector: app.kubernetes.io/name=whoami
spec:
  parentRefs:
    - name: platform
      namespace: kube-system
      sectionName: https
  hostnames:
    - whoami.${domain}
  rules:
    - backendRefs:
        - name: keda-add-ons-http-interceptor-proxy
          namespace: keda
          port: 8080
